src/objects/BRNSHRK__BrainsharkSettings__c.object
<CustomObject>
    <description>This object contains only 1 record containing the integration settings.</description>
    <fields>
        <fullName>BRNSHRK__AutomaticallyAssociateUserIds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Associate UserIds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Blind_CC__c</fullName>
        <label>Blind CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Brainshark_Admin_Username__c</fullName>
        <label>Brainshark Admin Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Brainshark_Company_Name__c</fullName>
        <label>Brainshark Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Common_Brainshark_Password__c</fullName>
        <label>Brainshark Common Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__EnableCRMSend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EnableCRMSend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__EnableClientSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableClientSend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__FolderList__c</fullName>
        <label>Folder List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__FolderRestrictions__c</fullName>
        <label>Folder Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>IncludeList</fullName>
                </value>
                <value>
                    <fullName>ExcludeList</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__HidePrivatePresentations__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Private Presentations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ShowBCCOnForm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowBCCOnForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__User_Authentication_Type__c</fullName>
        <label>User Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Using a common brainshark user for all sforce</fullName>
                    <default>true</default>
                    <label>Using a common brainshark user for all sforce</label>
                </value>
                <value>
                    <fullName>Using a unique brainshark user for each sforce user</fullName>
                </value>
                <value>
                    <fullName>Prompt users to enter a username and password</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__brainshark_admin_user_password__c</fullName>
        <label>Brainshark Admin Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__brainshark_automatic_synch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synch all viewing data automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__brainshark_common_username__c</fullName>
        <label>Common Brainshark Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brainshark Settings</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CompanyName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brainshark Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>